# python-dfpwm

./: README.md  build.py  pyproject.toml
dfpwm/: __init__.py  convertor.pyx  resample.py
tests/: test_convert.py
