[tool.poetry]
name = "dfpwm"
version = "0.1.6"
description = "DFPWM convertor for Python"
authors = ["cyan <contact@cyans.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
librosa = { version = "*", optional = true }
Cython = "^3.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core", "numpy", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
